cmake_minimum_required(VERSION 3.24)
project(tapLan)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
aux_source_directory(. MAIN)
add_subdirectory(tapLanDrive)
add_subdirectory(tapLanSocket)
add_executable(tapLan ${MAIN})
target_link_libraries(tapLan tapLanDrive tapLanSocket)
if(WIN32)
find_library(WS2_32_LIBRARY ws2_32)
target_link_libraries(tapLan ${WS2_32_LIBRARY})
endif()
