cmake_minimum_required(VERSION 3.24)
project(tapLan)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXE_LINKER_FLAGS "-static")
aux_source_directory(. MAIN)
add_subdirectory(tapLanDrive)
add_subdirectory(tapLanSocket)
add_subdirectory(tapLanDHCP)
add_subdirectory(tapLanSecurity)
add_executable(tapLan ${MAIN})
target_link_libraries(tapLan tapLanDrive tapLanSocket tapLanDHCP tapLanSecurity)
