aux_source_directory(. TapLanSecurity)
add_library(tapLanSecurity ${TapLanSecurity})
find_package(OpenSSL REQUIRED)
target_link_libraries(tapLanSecurity PRIVATE OpenSSL::Crypto OpenSSL::SSL)
if(WIN32)
find_library(WS2_32_LIBRARY ws2_32)
target_link_libraries(tapLanSecurity PRIVATE ${WS2_32_LIBRARY})
endif()
