aux_source_directory(. TapLanSecurity)
add_library(tapLanSecurity ${TapLanSecurity})
set(OPENSSL_USE_STATIC_LIBS TRUE)
find_package(OpenSSL REQUIRED)
if(WIN32)
target_link_libraries(tapLanSecurity PUBLIC OpenSSL::Crypto OpenSSL::SSL ws2_32)
else()
target_link_libraries(tapLanSecurity PUBLIC OpenSSL::Crypto OpenSSL::SSL)
endif()
